GDPR: Ensure the link is visible on front

--- a/shuup/gdpr/static_src/less/index.less
+++ b/shuup/gdpr/static_src/less/index.less
@@ -26,6 +26,7 @@
 
         #privacy-preferences-btn {
             white-space: nowrap;
+            color: white !important;
         }
         #agree-btn {
             padding: 0.5em 1em;
